--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <h1>Welcome to CCPspy's Website!</h1>
     <p>
       This is my personal homepage. Explore my projects and other cool stuff linked below.<br>
-      At the bottom, play a quick round of Pong against the computer!
+      At the bottom, play a quick round of Space Invaders!
     </p>
   </div>
   <div class="links">
@@ -85,149 +85,198 @@
     <!-- Add more links as you wish! -->
   </div>
   <div class="pong-container">
-    <h2>Pong Game</h2>
+    <h2>Space Invaders</h2>
     <div class="pong-instructions">
-      Use your <b>Up</b> and <b>Down</b> arrow keys to move your paddle (right side).<br>
-      Try to beat the computer (left side)!
+      Use <b>Left</b> and <b>Right</b> arrow keys to move. Press <b>Space</b> to shoot.<br>
+      Survive waves and climb levels — your score & level are shown below.
     </div>
-    <canvas id="pong" width="500" height="300"></canvas>
-    <div id="pong-score" style="color:#f1c40f; margin-top:10px; font-size:16px;"></div>
+    <!-- canvas kept id 'pong' so existing styles/ids remain compatible -->
+    <canvas id="pong" width="600" height="400"></canvas>
+    <div id="pong-score" style="color:#f1c40f; margin-top:10px; font-size:16px;">Score: 0 | Level: 1</div>
   </div>
+
   <script>
-    // Pong game logic
+    // Space Invaders (replaces Pong)
     const canvas = document.getElementById('pong');
     const ctx = canvas.getContext('2d');
-    const w = canvas.width, h = canvas.height;
+    const info = document.getElementById('pong-score');
 
-    // Paddle settings
-    const paddleW = 10, paddleH = 60, padMargin = 10;
-    let playerY = h/2 - paddleH/2, aiY = h/2 - paddleH/2;
-    const paddleSpeed = 5;
+    // Images (public domain / Wikimedia links)
+    const playerImg = new Image();
+    const alienImg = new Image();
+    const bulletImg = new Image();
 
-    // Ball settings
-    let ballX = w/2, ballY = h/2;
-    let ballVX = -4, ballVY = 2.5;
-    const ballSize = 12;
+    playerImg.crossOrigin = 'anonymous';
+    alienImg.crossOrigin = 'anonymous';
+    bulletImg.crossOrigin = 'anonymous';
 
-    let playerScore = 0, aiScore = 0;
-    const maxScore = 5;
+    playerImg.src = 'https://upload.wikimedia.org/wikipedia/commons/2/20/Space_Invaders_player.svg';
+    alienImg.src = 'https://upload.wikimedia.org/wikipedia/commons/6/6b/Space_Invaders_alien.svg';
+    bulletImg.src = 'https://upload.wikimedia.org/wikipedia/commons/9/9a/Pixel_bullet.svg';
 
-    function drawRect(x, y, w, h, color) {
-      ctx.fillStyle = color;
-      ctx.fillRect(x, y, w, h);
+    let playerReady = false, alienReady = false, bulletReady = false;
+    let assetsLoaded = 0, totalAssets = 3, started = false;
+
+    function assetLoaded(name, ok) {
+      if (name === 'player') playerReady = ok;
+      if (name === 'alien') alienReady = ok;
+      if (name === 'bullet') bulletReady = ok;
+      assetsLoaded++;
+      if (assetsLoaded >= totalAssets && !started) startGame();
     }
-    function drawCircle(x, y, r, color) {
-      ctx.fillStyle = color;
-      ctx.beginPath();
-      ctx.arc(x, y, r, 0, Math.PI*2);
-      ctx.fill();
+    playerImg.onload = () => assetLoaded('player', true);
+    alienImg.onload = () => assetLoaded('alien', true);
+    bulletImg.onload = () => assetLoaded('bullet', true);
+    playerImg.onerror = () => { console.warn('player image failed to load'); assetLoaded('player', false); };
+    alienImg.onerror = () => { console.warn('alien image failed to load'); assetLoaded('alien', false); };
+    bulletImg.onerror = () => { console.warn('bullet image failed to load'); assetLoaded('bullet', false); };
+
+    const fallbackTimeout = 4000;
+    const fallbackTimer = setTimeout(() => {
+      if (!started) {
+        console.warn('Assets taking too long — starting with placeholders.');
+        startGame();
+      }
+    }, fallbackTimeout);
+
+    // Game state
+    const player = { x: canvas.width/2 - 20, y: canvas.height - 50, width: 40, height: 30, speed: 6 };
+    const bullets = [];
+    let enemies = [];
+    let enemyDirection = 1;
+    let score = 0;
+    let level = 1;
+    let gameOver = false;
+
+    function createEnemies() {
+      enemies = [];
+      const rows = Math.min(5, 2 + level); // cap rows so it fits
+      const cols = 8;
+      const spacingX = Math.floor((canvas.width - 80) / cols);
+      for (let r = 0; r < rows; r++) {
+        for (let c = 0; c < cols; c++) {
+          enemies.push({ x: 40 + c * spacingX, y: 30 + r * 40, width: 32, height: 24, alive: true });
+        }
+      }
+    }
+    createEnemies();
+
+    let rightPressed = false, leftPressed = false;
+
+    document.addEventListener('keydown', (e) => {
+      if (e.key === 'ArrowRight' || e.code === 'ArrowRight') rightPressed = true;
+      if (e.key === 'ArrowLeft' || e.code === 'ArrowLeft') leftPressed = true;
+      if ((e.key === ' ' || e.code === 'Space' || e.key === 'Spacebar') && !gameOver) {
+        e.preventDefault();
+        if (bullets.length < 6) bullets.push({ x: player.x + player.width/2 - 2, y: player.y, speed: 8 });
+      }
+    });
+    document.addEventListener('keyup', (e) => {
+      if (e.key === 'ArrowRight' || e.code === 'ArrowRight') rightPressed = false;
+      if (e.key === 'ArrowLeft' || e.code === 'ArrowLeft') leftPressed = false;
+    });
+
+    function update() {
+      if (gameOver) return;
+      if (rightPressed && player.x + player.width < canvas.width) player.x += player.speed;
+      if (leftPressed && player.x > 0) player.x -= player.speed;
+
+      // bullets
+      for (let i = bullets.length - 1; i >= 0; i--) {
+        const b = bullets[i];
+        b.y -= b.speed;
+        if (b.y + 10 < 0) bullets.splice(i, 1);
+      }
+
+      const alive = enemies.filter(e => e.alive);
+      let shiftDown = false;
+      if (alive.length > 0) {
+        const rightmost = Math.max(...alive.map(e => e.x + e.width));
+        const leftmost = Math.min(...alive.map(e => e.x));
+        if (rightmost + 10 >= canvas.width && enemyDirection === 1) shiftDown = true;
+        if (leftmost - 10 <= 0 && enemyDirection === -1) shiftDown = true;
+
+        alive.forEach(e => {
+          if (shiftDown) e.y += 20;
+          else e.x += enemyDirection * (1 + level * 0.3);
+        });
+        if (shiftDown) enemyDirection *= -1;
+      }
+
+      // collisions
+      for (let i = bullets.length - 1; i >= 0; i--) {
+        const b = bullets[i];
+        for (let j = 0; j < enemies.length; j++) {
+          const e = enemies[j];
+          if (e.alive && b.x < e.x + e.width && b.x + 4 > e.x && b.y < e.y + e.height && b.y + 10 > e.y) {
+            e.alive = false;
+            bullets.splice(i, 1);
+            score += 10 * level;
+            info.textContent = `Score: ${score} | Level: ${level}`;
+            break;
+          }
+        }
+      }
+
+      for (let k = 0; k < enemies.length; k++) {
+        const e = enemies[k];
+        if (e.alive && e.y + e.height >= player.y) {
+          gameOver = true; break;
+        }
+      }
+
+      if (enemies.every(e => !e.alive)) {
+        level++;
+        createEnemies();
+        info.textContent = `Score: ${score} | Level: ${level}`;
+        // small pause could be added here
+      }
     }
 
-    function resetBall(direction = 1) {
-      ballX = w/2;
-      ballY = h/2;
-      ballVX = direction * (3.5 + Math.random()*1.5);
-      ballVY = (Math.random()-0.5)*5;
+    // Drawing with safe fallbacks
+    function drawPlayer() {
+      if (playerReady && playerImg.complete && playerImg.naturalWidth !== 0) {
+        ctx.drawImage(playerImg, player.x, player.y, player.width, player.height);
+      } else {
+        ctx.fillStyle = 'lime'; ctx.fillRect(player.x, player.y, player.width, player.height);
+      }
+    }
+    function drawBullet(b) {
+      if (bulletReady && bulletImg.complete && bulletImg.naturalWidth !== 0) {
+        ctx.drawImage(bulletImg, b.x, b.y, 4, 10);
+      } else { ctx.fillStyle = 'white'; ctx.fillRect(b.x, b.y, 4, 10); }
+    }
+    function drawAlien(e) {
+      if (alienReady && alienImg.complete && alienImg.naturalWidth !== 0) {
+        ctx.drawImage(alienImg, e.x, e.y, e.width, e.height);
+      } else { ctx.fillStyle = 'red'; ctx.fillRect(e.x, e.y, e.width, e.height); }
     }
 
     function draw() {
-      ctx.clearRect(0, 0, w, h);
-      // Draw middle dashed line
-      ctx.setLineDash([8, 8]);
-      ctx.strokeStyle = "#666";
-      ctx.beginPath();
-      ctx.moveTo(w/2, 0);
-      ctx.lineTo(w/2, h);
-      ctx.stroke();
-      ctx.setLineDash([]);
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      drawPlayer();
+      for (let i = 0; i < bullets.length; i++) drawBullet(bullets[i]);
+      for (let i = 0; i < enemies.length; i++) { const e = enemies[i]; if (e.alive) drawAlien(e); }
 
-      // Draw paddles
-      drawRect(padMargin, aiY, paddleW, paddleH, "#f1c40f");
-      drawRect(w-padMargin-paddleW, playerY, paddleW, paddleH, "#09f");
-
-      // Draw ball
-      drawCircle(ballX, ballY, ballSize, "#fff");
-    }
-
-    function update() {
-      // Ball movement
-      ballX += ballVX;
-      ballY += ballVY;
-
-      // Top/bottom wall collision
-      if (ballY-ballSize < 0) { ballY = ballSize; ballVY *= -1; }
-      if (ballY+ballSize > h) { ballY = h-ballSize; ballVY *= -1; }
-
-      // Paddle collisions
-      // AI paddle (left)
-      if (ballX-ballSize < padMargin+paddleW &&
-          ballY > aiY && ballY < aiY+paddleH) {
-        ballX = padMargin+paddleW+ballSize;
-        ballVX *= -1.05;
-        ballVY += (Math.random()-0.5)*2;
-      }
-      // Player paddle (right)
-      if (ballX+ballSize > w-padMargin-paddleW &&
-          ballY > playerY && ballY < playerY+paddleH) {
-        ballX = w-padMargin-paddleW-ballSize;
-        ballVX *= -1.05;
-        ballVY += (Math.random()-0.5)*2;
-      }
-
-      // Scoring
-      if (ballX-ballSize < 0) {
-        playerScore++;
-        resetBall(1);
-      }
-      if (ballX+ballSize > w) {
-        aiScore++;
-        resetBall(-1);
-      }
-
-      // AI movement: follow ball with some delay
-      let aiCenter = aiY + paddleH/2;
-      if (aiCenter < ballY-10) aiY += paddleSpeed*0.6;
-      else if (aiCenter > ballY+10) aiY -= paddleSpeed*0.6;
-      // Clamp AI paddle
-      if (aiY < 0) aiY = 0;
-      if (aiY + paddleH > h) aiY = h - paddleH;
-
-      // Clamp player paddle
-      if (playerY < 0) playerY = 0;
-      if (playerY + paddleH > h) playerY = h - paddleH;
-    }
-
-    function updateScore() {
-      document.getElementById('pong-score').textContent =
-        `Player: ${playerScore} | Computer: ${aiScore}`;
-      if (playerScore >= maxScore || aiScore >= maxScore) {
-        document.getElementById('pong-score').textContent +=
-          playerScore >= maxScore ? " — You Win! 🎉" : " — Computer Wins! 🤖";
-        // Reset after short delay
-        setTimeout(() => {
-          playerScore = 0; aiScore = 0;
-          resetBall(playerScore >= maxScore ? -1 : 1);
-          document.getElementById('pong-score').textContent =
-            `Player: ${playerScore} | Computer: ${aiScore}`;
-        }, 2500);
+      if (gameOver) {
+        ctx.fillStyle = 'rgba(0,0,0,0.6)'; ctx.fillRect(0,0,canvas.width,canvas.height);
+        ctx.fillStyle = 'white'; ctx.font = '40px Arial'; ctx.textAlign = 'center';
+        ctx.fillText('Game Over', canvas.width/2, canvas.height/2 - 10);
+        ctx.font = '20px Arial'; ctx.fillText(`Final Score: ${score}`, canvas.width/2, canvas.height/2 + 30);
       }
     }
 
-    function gameLoop() {
-      update();
-      draw();
-      updateScore();
-      requestAnimationFrame(gameLoop);
-    }
+    function loop() { update(); draw(); requestAnimationFrame(loop); }
 
-    // Controls
-    window.addEventListener('keydown', (e) => {
-      if (e.key === "ArrowUp") playerY -= paddleSpeed*2.4;
-      if (e.key === "ArrowDown") playerY += paddleSpeed*2.4;
-    });
+    function startGame() { if (started) return; started = true; clearTimeout(fallbackTimer); info.textContent = `Score: ${score} | Level: ${level}`; requestAnimationFrame(loop); }
 
-    resetBall(1);
-    gameLoop();
+    // ensure cached images are counted
+    setTimeout(() => {
+      if (playerImg.complete) playerImg.onload && playerImg.onload();
+      if (alienImg.complete) alienImg.onload && alienImg.onload();
+      if (bulletImg.complete) bulletImg.onload && bulletImg.onload();
+    }, 0);
+
   </script>
 </body>
 </html>
