Replace multiple links with CAR GAME link

--- a/index.html
+++ b/index.html
@@ -74,14 +74,7 @@
     </p>
   </div>
   <div class="links">
-    <a href="https://ccpspy.github.io/project1">project1</a>
-    <a href="https://ccpspy.github.io/games">games</a>
-    <a href="https://ccpspy.github.io/tools">tools</a>
-    <a href="https://ccpspy.github.io/blog">blog</a>
-    <a href="https://github.com/CCPspy">github</a>
-    <a href="https://ccpspy.github.io/ai">ai</a>
-    <a href="https://ccpspy.github.io/links">links</a>
-    <a href="https://ccpspy.github.io/about">about</a>
+    <a href="https://ccpspy.github.io/cargame">CAR GAME</a>
     <!-- Add more links as you wish! -->
   </div>
   <div class="pong-container">
