--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
   </div>
   <div class="links">
     <a href="https://ccpspy.github.io/cargame">CAR GAME</a>
+    <a href="https://github.com/CCPspy">GITHUB</a>
     <!-- Add more links as you wish! -->
   </div>
   <div class="pong-container">
