--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Welcome to CCPspy's Website</title>
+  <title>Welcome to Eric(CCPspy)'s Website!</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     body {
@@ -67,7 +67,7 @@
 </head>
 <body>
   <div class="intro">
-    <h1>Welcome to CCPspy's Website!</h1>
+    <h1>Welcome to Eric(CCPspy)'s Website!</h1>
     <p>
       This is my personal homepage. Explore my projects and other cool stuff linked below.<br>
       At the bottom, play a quick round of Space Invaders!
@@ -79,7 +79,7 @@
     <!-- Add more links as you wish! -->
   </div>
   <div class="pong-container">
-    <h2>Space Invaders</h2>
+    <h2>Space Invaders(My other better games are up top like the car game)</h2>
     <div class="pong-instructions">
       Use <b>Left</b> and <b>Right</b> arrow keys to move. Press <b>Space</b> to shoot.<br>
       Survive waves and climb levels — your score & level are shown below.
