Restore Willetton SHS reference in index.html

--- a/index.html
+++ b/index.html
@@ -314,8 +314,7 @@
         <h1 class="name-ccpspy" id="ccpspy-title">CCPspy</h1>
       </div>
       
-      <!-- Removed Willetton SHS reference -->
-      <div class="school-tag" style="visibility:hidden">Property of Eric Li</div>
+      <div class="school-tag">Willetton SHS</div>
 
       <p class="intro-text">
         Creator, Developer, and 3D Printer. <br>
