Update title in index.html for branding

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- Copyright Eric Li - 2025. All Rights Reserved. -->
 <head>
   <meta charset="UTF-8">
-  <title>Eric CCPspy | Portfolio</title>
+  <title>Eric // CCPspy | Portfolio</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Imported Orbitron for the 'Cooler' Sci-Fi look -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&family=Orbitron:wght@500;700;900&display=swap" rel="stylesheet">
